--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "kawon-test",
     "description": "11",
-    "slug": "snack-ryveBeCG7",
+    "slug": "snack-rJYfJZAGQ",
     "privacy": "unlisted",
     "sdkVersion": "28.0.0",
     "version": "1.0.0",
